--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@ purpose.</p>
         <tbody>
     <tr><td>Theragun Prime</td><td>No</td></tr>
     <tr><td>Apple Watch</td><td>Yes</td></tr>
+    <tr><td>Storz and Bickel Mighty</td><td>No</td></tr>
+    <tr><td>Apple TV</td><td>Yes</td></tr>
+    <tr><td>Test</td><td>no</td></tr>
+    <tr><td>aa</td><td>bb</td></tr>
 
         </tbody>
     </table>
