--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ purpose.</p>
     <tr><td>Theragun Prime</td><td>No</td></tr>
     <tr><td>Apple Watch</td><td>Yes</td></tr>
     <tr><td>Storz and Bickel Mighty</td><td>No</td></tr>
+    <tr><td>Apple TV</td><td> Yes</td></tr>
 
         </tbody>
     </table>
