add another column for setup

--- a/index.html
+++ b/index.html
@@ -10,34 +10,25 @@
 <body>
     <h1>AppCheck - Product Compatibility</h1>
     
-<p>Tired of downloading apps only to find out they’re not essential for
-your new device? Frustrated with cluttering your phone with unnecessary
-software?</p>
-<p>No more guessing games. Streamlines your device setup process by
-providing a simple: yes, no</p>
-<p>🚫 Say Goodbye to Unwanted Apps Why clutter your device with apps you
-won’t use?</p>
-<p>🌐 Comprehensive Database Our extensive database covers a wide range
-of products and their app dependencies.</p>
-<p>🛡️ Privacy First Concerned about privacy? prioritizes your data
-security. We don’t store personal information or track your usage
-patterns.</p>
-<p>🌟 Make Every Download Count With , every app you download serves a
-purpose.</p>
+<p>Want to buy something but every review mentions an app? Want to know
+if the thing works without an app? Want to know if the app is necessary
+to even start using the thing?</p>
 
 
     <table id="productTable">
         <thead>
             <tr>
                 <th>Product</th>
-                <th>App Needed</th>
+                <th>App Needed to Use</th>
+                <th>App Needed to Setup</th>
             </tr>
         </thead>
         <tbody>
-    <tr><td>Theragun Prime</td><td>No</td></tr>
-    <tr><td>Apple Watch</td><td>Yes</td></tr>
-    <tr><td>Storz and Bickel Mighty</td><td>No</td></tr>
-    <tr><td>Apple TV</td><td> Yes</td></tr>
+    <tr><td>Theragun Prime</td><td>No</td><td>No</td></tr>
+    <tr><td>Apple Watch</td><td>Yes</td><td>Yes</td></tr>
+    <tr><td>Storz and Bickel Mighty</td><td>No</td><td>Yes</td></tr>
+    <tr><td>Apple TV</td><td> Yes</td><td>Yes</td></tr>
+    <tr><td>FitBit</td><td> Yes</td><td> Yes</td></tr>
 
         </tbody>
     </table>
