--- a/blurb.html
+++ b/blurb.html
@@ -1,3 +1,3 @@
-<p>Want to buy something but every review mentions an app? Want to know
-if the thing works without an app? Want to know if the app is necessary
-to even start using the thing?</p>
+<p>Every review mentions features in an app?</p>
+<p>Want to know if the thing works without an app?<br />
+Want to know if the app is necessary to even start using the thing?</p>
