--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>AppCheck - Product Compatibility</h1>
+    <h1>Is the App Necessary?</h1>
     
-<p>Want to buy something but every review mentions an app? Want to know
-if the thing works without an app? Want to know if the app is necessary
-to even start using the thing?</p>
+<p>Every review mentions features in an app?</p>
+<p>Want to know if the thing works without an app?<br />
+Want to know if the app is necessary to even start using the thing?</p>
 
 
     <table id="productTable">
