--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@ Want to know if the app is necessary to even start using the thing?</p>
 
         </tbody>
     </table>
+    <a href="https://github.com/point-contents/is-the-app-necessary" target="_blank">Visit GitHub Repository</a>
 </body>
 <script>
 
+// stolen from https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table
 function search_table() {
     var input, filter, found, table, tr, td, i, j;
     input = document.getElementById("user_input");
@@ -59,6 +61,8 @@ function search_table() {
         }
     }
 }
+
+
 
 
 </script>
