--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ Want to know if the app is necessary to even start using the thing?</p>
     <tr><td>Apple TV</td><td> Yes</td><td>Yes</td></tr>
     <tr><td>FitBit</td><td> Yes</td><td> Yes</td></tr>
     <tr><td>Segway G2</td><td> No</td><td> Yes</td></tr>
+    <tr><td>Novation Circuit Tracks</td><td> No</td><td> No</td></tr>
+    <tr><td>Casio CTS1</td><td> No</td><td> No</td></tr>
 
         </tbody>
     </table>
