--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Want to know if the app is necessary to even start using the thing?</p>
         <tbody>
     <tr><td>Theragun Prime</td><td>No</td><td>No</td></tr>
     <tr><td>Apple Watch</td><td>Yes</td><td>Yes</td></tr>
-    <tr><td>Storz and Bickel Mighty</td><td>No</td><td>Yes</td></tr>
+    <tr><td>Storz and Bickel Mighty</td><td>No</td><td>No</td></tr>
     <tr><td>Apple TV</td><td> Yes</td><td>Yes</td></tr>
     <tr><td>FitBit</td><td> Yes</td><td> Yes</td></tr>
     <tr><td>Segway G2</td><td> No</td><td> Yes</td></tr>
@@ -37,8 +37,34 @@ Want to know if the app is necessary to even start using the thing?</p>
         </tbody>
     </table>
     <ul>
-    <li><a href="https://github.com/point-contents/is-the-app-necessary" target="_blank">Visit GitHub Repository</a></li>
+    <li><a href="https://github.com/point-contents/is-the-app-necessary" target="_blank">Visit Git Repository</a></li>
     </ul>
+    <br><br>
+	<h3>Directory Tree</h1><p>
+	<a href="./">.</a><br>
+	├── <a href="./blurb.html">blurb.html</a><br>
+	├── <a href="./blurb.md">blurb.md</a><br>
+	├── <a href="./generate_html.py">generate_html.py</a><br>
+	├── <a href="./how_this_is_made.html">how_this_is_made.html</a><br>
+	├── <a href="./index.html">index.html</a><br>
+	├── <a href="./makefile">makefile</a><br>
+	├── <a href="./page_index.html">page_index.html</a><br>
+	├── <a href="./products.csv">products.csv</a><br>
+	├── <a href="./script.js">script.js</a><br>
+	└── <a href="./styles.css">styles.css</a><br>
+<br><br><p>
+
+1 directory, 10 files
+
+</p>
+	<hr>
+	<p class="VERSION">
+		 tree v2.1.1 © 1996 - 2023 by Steve Baker and Thomas Moore <br>
+		 HTML output hacked and copyleft © 1998 by Francesc Rocher <br>
+		 JSON output hacked and copyleft © 2014 by Florian Sesser <br>
+		 Charsets / OS/2 support © 2001 by Kyosuke Tokoro
+	</p>
+
 </body>
 <script>
 
@@ -71,26 +97,3 @@ function search_table() {
 
 
 </script>
-	<h3>Directory Tree</h1><p>
-	<a href="./">.</a><br>
-	├── <a href="./blurb.html">blurb.html</a><br>
-	├── <a href="./blurb.md">blurb.md</a><br>
-	├── <a href="./generate_html.py">generate_html.py</a><br>
-	├── <a href="./index.html">index.html</a><br>
-	├── <a href="./makefile">makefile</a><br>
-	├── <a href="./products.csv">products.csv</a><br>
-	├── <a href="./script.js">script.js</a><br>
-	└── <a href="./styles.css">styles.css</a><br>
-<br><br><p>
-
-1 directory, 8 files
-
-</p>
-	<hr>
-	<p class="VERSION">
-		 tree v2.1.1 © 1996 - 2023 by Steve Baker and Thomas Moore <br>
-		 HTML output hacked and copyleft © 1998 by Francesc Rocher <br>
-		 JSON output hacked and copyleft © 2014 by Florian Sesser <br>
-		 Charsets / OS/2 support © 2001 by Kyosuke Tokoro
-	</p>
-</body>
