--- a/blurb.html
+++ b/blurb.html
@@ -1,3 +1,7 @@
 <p>Every review mentions features in an app?</p>
 <p>Want to know if the thing works without an app?<br />
 Want to know if the app is necessary to even start using the thing?</p>
+<p><a
+href="https://app.netlify.com/sites/dancing-pavlova-67c9fa/deploys"><img
+src="https://api.netlify.com/api/v1/badges/43469286-e452-4d40-96e6-735391cf1e33/deploy-status"
+alt="Netlify Status" /></a></p>
