--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <p>Every review mentions features in an app?</p>
 <p>Want to know if the thing works without an app?<br />
 Want to know if the app is necessary to even start using the thing?</p>
+<p><a
+href="https://app.netlify.com/sites/dancing-pavlova-67c9fa/deploys"><img
+src="https://api.netlify.com/api/v1/badges/43469286-e452-4d40-96e6-735391cf1e33/deploy-status"
+alt="Netlify Status" /></a></p>
 
 
     <input id='user_input' onkeyup='search_table()' type='text' placeholder="Enter item here">
@@ -45,16 +49,18 @@ Want to know if the app is necessary to even start using the thing?</p>
 	├── <a href="./blurb.html">blurb.html</a><br>
 	├── <a href="./blurb.md">blurb.md</a><br>
 	├── <a href="./generate_html.py">generate_html.py</a><br>
-	├── <a href="./how_this_is_made.html">how_this_is_made.html</a><br>
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./makefile">makefile</a><br>
+	├── <a href="./man.css">man.css</a><br>
+	├── <a href="./man.html">man.html</a><br>
 	├── <a href="./page_index.html">page_index.html</a><br>
 	├── <a href="./products.csv">products.csv</a><br>
+	├── <a href="./readme.md">readme.md</a><br>
 	├── <a href="./script.js">script.js</a><br>
 	└── <a href="./styles.css">styles.css</a><br>
 <br><br><p>
 
-1 directory, 10 files
+1 directory, 12 files
 
 </p>
 	<hr>
